examples/errors/compile-error/bad4.vc



func main() {
    let a;
    let b = a;
}
